# batman

./: Cargo.toml  README.md
examples/: basic.rs  batman.rs
src/: backtrace.rs  lib.rs  stack.rs  unix.rs  windows.rs  x86_64.rs
tests/: should_panic.rs  should_pass.rs  shound_pass_per_thread.rs
